[NOISSUE] added some controllers with tests
