# src/main/java/com/flockinger/spongeblogSP/api/CategoryController.java
@@ -1,6 +1,7 @@
 package com.flockinger.spongeblogSP.api;
 
 import org.springframework.http.ResponseEntity;
+import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -9,6 +10,12 @@ import org.springframework.web.bind.annotation.RequestMethod;
 import com.flockinger.spongeblogSP.dto.CategoryDTO;
 import com.flockinger.spongeblogSP.dto.CategoryPostsDTO;
 import com.flockinger.spongeblogSP.dto.Error;
+import com.flockinger.spongeblogSP.exception.DependencyNotFoundException;
+import com.flockinger.spongeblogSP.exception.DtoValidationFailedException;
+import com.flockinger.spongeblogSP.exception.DuplicateEntityException;
+import com.flockinger.spongeblogSP.exception.EntityIsNotExistingException;
+import com.flockinger.spongeblogSP.exception.NoVersionFoundException;
+import com.flockinger.spongeblogSP.exception.OrphanedDependingEntitiesException;
 
 import io.swagger.annotations.*;
 
@@ -23,11 +30,11 @@ public interface CategoryController {
         @ApiResponse(code = 404, message = "Entity not found.", response = Error.class),
         @ApiResponse(code = 409, message = "Request results in a conflict.", response = Error.class),
         @ApiResponse(code = 500, message = "Internal Server Error.", response = Void.class) })
-    @RequestMapping(value = "/api/v1/categories/{category-id}",
+    @RequestMapping(value = "/api/v1/categories/{categoryId}",
         produces = { "application/json" }, 
         consumes = { "application/json" },
         method = RequestMethod.DELETE)
-    ResponseEntity<?> apiV1CategoriesCategoryIdDelete(@ApiParam(value = "Unique identifier of a Category;",required=true ) @PathVariable("categoryId") Long categoryId);
+    ResponseEntity<?> apiV1CategoriesCategoryIdDelete(@ApiParam(value = "Unique identifier of a Category;",required=true ) @PathVariable("categoryId") Long categoryId) throws EntityIsNotExistingException, OrphanedDependingEntitiesException;
 
 
     @ApiOperation(value = "Get Category", notes = "Fetches Category with defined Id.", response = CategoryPostsDTO.class, tags={ "Categories", })
@@ -39,11 +46,11 @@ public interface CategoryController {
         @ApiResponse(code = 404, message = "Entity not found.", response = Error.class),
         @ApiResponse(code = 409, message = "Request results in a conflict.", response = Error.class),
         @ApiResponse(code = 500, message = "Internal Server Error.", response = Void.class) })
-    @RequestMapping(value = "/api/v1/categories/{category-id}",
+    @RequestMapping(value = "/api/v1/categories/{categoryId}",
         produces = { "application/json" }, 
         consumes = { "application/json" },
         method = RequestMethod.GET)
-    ResponseEntity<?> apiV1CategoriesCategoryIdGet(@ApiParam(value = "Unique identifier of a Category;",required=true ) @PathVariable("categoryId") Long categoryId);
+    ResponseEntity<?> apiV1CategoriesCategoryIdGet(@ApiParam(value = "Unique identifier of a Category;",required=true ) @PathVariable("categoryId") Long categoryId) throws EntityIsNotExistingException;
 
 
     @ApiOperation(value = "Categorys of Parent.", notes = "Returns all Categorys of defined parent Category.", response = CategoryPostsDTO.class, responseContainer = "List", tags={ "Categories", })
@@ -55,11 +62,11 @@ public interface CategoryController {
         @ApiResponse(code = 404, message = "Entity not found.", response = Error.class),
         @ApiResponse(code = 409, message = "Request results in a conflict.", response = Error.class),
         @ApiResponse(code = 500, message = "Internal Server Error.", response = Void.class) })
-    @RequestMapping(value = "/api/v1/categories/children/{parent-category-id}",
+    @RequestMapping(value = "/api/v1/categories/children/{parentCategoryId}",
         produces = { "application/json" }, 
         consumes = { "application/json" },
         method = RequestMethod.GET)
-    ResponseEntity<?> apiV1CategoriesChildrenParentCategoryIdGet(@ApiParam(value = "Unique identifier of the parent Category;",required=true ) @PathVariable("parentCategoryId") Long parentCategoryId);
+    ResponseEntity<?> apiV1CategoriesChildrenParentCategoryIdGet(@ApiParam(value = "Unique identifier of the parent Category;",required=true ) @PathVariable("parentCategoryId") Long parentCategoryId) throws EntityIsNotExistingException;
 
 
     @ApiOperation(value = "All Categorys", notes = "Returns all Categorys.", response = CategoryDTO.class, responseContainer = "List", tags={ "Categories", })
@@ -91,7 +98,7 @@ public interface CategoryController {
         produces = { "application/json" }, 
         consumes = { "application/json" },
         method = RequestMethod.POST)
-    ResponseEntity<?> apiV1CategoriesPost(@ApiParam(value = "" ,required=true ) @RequestBody CategoryDTO categoryEdit);
+    ResponseEntity<?> apiV1CategoriesPost(@ApiParam(value = "" ,required=true ) @RequestBody CategoryDTO categoryEdit, BindingResult bindingResult) throws DtoValidationFailedException, DependencyNotFoundException;
 
 
     @ApiOperation(value = "Update Category", notes = "Updated a Category entry.", response = Void.class, tags={ "Categories", })
@@ -107,7 +114,7 @@ public interface CategoryController {
         produces = { "application/json" }, 
         consumes = { "application/json" },
         method = RequestMethod.PUT)
-    ResponseEntity<?> apiV1CategoriesPut(@ApiParam(value = "" ,required=true ) @RequestBody CategoryDTO categoryEdit);
+    ResponseEntity<?> apiV1CategoriesPut(@ApiParam(value = "" ,required=true ) @RequestBody CategoryDTO categoryEdit, BindingResult bindingResult) throws EntityIsNotExistingException, DtoValidationFailedException, DependencyNotFoundException;
 
 
     @ApiOperation(value = "Rewind Category", notes = "Restores previous Category entry.", response = Void.class, tags={ "Categories", })
@@ -119,10 +126,10 @@ public interface CategoryController {
         @ApiResponse(code = 404, message = "Entity not found.", response = Error.class),
         @ApiResponse(code = 409, message = "Request results in a conflict.", response = Error.class),
         @ApiResponse(code = 500, message = "Internal Server Error.", response = Void.class) })
-    @RequestMapping(value = "/api/v1/categories/rewind/{category-id}",
+    @RequestMapping(value = "/api/v1/categories/rewind/{categoryId}",
         produces = { "application/json" }, 
         consumes = { "application/json" },
         method = RequestMethod.PUT)
-    ResponseEntity<?> apiV1CategoriesRewindCategoryIdPut(@ApiParam(value = "Unique identifier of a Category;",required=true ) @PathVariable("categoryId") Long categoryId);
+    ResponseEntity<?> apiV1CategoriesRewindCategoryIdPut(@ApiParam(value = "Unique identifier of a Category;",required=true ) @PathVariable("categoryId") Long categoryId) throws NoVersionFoundException;
 
 }
